--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
-    <p>Hey I m Tushar Sharma</p>
     <p>{{pageTitle}}</p>
     
     <p><a href = "/">Home</a></p>
     <p><a href = "/about">About</a></p>
+    <p><a href = "/project">Project</a></p>
 </header>
